avoid margin change if no scrollbar

--- a/style.scss
+++ b/style.scss
@@ -331,6 +331,10 @@ tbody tr:nth-child(odd) th {
 
 }
 
+.about-page-scrollbar-visible {
+  margin-bottom: 300px;
+}
+
 .post {
   &-title {
     margin-bottom: .25rem;
